[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/pixel_font_20.tres" type="DynamicFont" id=1]
[ext_resource path="res://pause_screen/pause_screen.gd" type="Script" id=2]
[ext_resource path="res://view_cards/view_cards.tscn" type="PackedScene" id=3]

[node name="PauseScreen" type="Popup"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.75
margin_top = -48.5
margin_right = 50.75
margin_bottom = -21.5
custom_fonts/font = ExtResource( 1 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewCardsButton" type="Button" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -13.5
margin_right = 57.0
margin_bottom = 13.5
custom_fonts/font = ExtResource( 1 )
text = "VIEW CARDS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 20.5
margin_right = 50.0
margin_bottom = 47.5
custom_fonts/font = ExtResource( 1 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewCards" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="Background/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Background/ViewCardsButton" to="." method="_on_ViewCardsButton_pressed"]
[connection signal="pressed" from="Background/QuitButton" to="." method="_on_QuitButton_pressed"]
